Adding full mvn-pom.xml